<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CarsharingApp</string>

    <!--TO Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_number_label">Car number</string>
    <string name="fuel_card_number_label">Fuel card number</string>
    <string name="color">Color</string>
    <string name="status__label">Status</string>
    <string name="creation_date_label">Creation date</string>
    <string name="creation_date_default" tools:ignore="TypographyDashes">2000-03-01</string>
    <string name="creation_date_time_default" tools:ignore="TypographyDashes">2011-04-14T00:00:00</string>
    <string name="delete_car_label">Delete Car</string>
    <string name="save_changes_label">Save changes</string>
    <string name="model_label">Model</string>
    <string name="insurance_label">Insurance</string>
    <string name="cars_menu_drawer_item">Cars</string>
    <string name="clients_menu_drawer_item">Clients</string>
    <string name="operators_menu_drawer_item">Operators</string>
    <string name="model_menu_drawer_item">Models</string>
    <string name="insurance_menu_drawer_item">Insurances</string>
    <string name="contract_menu_drawer_item">Contracts</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="licence_number_label">Licence number</string>
    <string name="full_name_label">Full name</string>
    <string name="credit_card_number_label">Credit card number</string>
    <string name="birthday_label">Birthday</string>
    <string name="address_label">Address</string>
    <string name="type_label">Type</string>
    <string name="waiting_cost_label">Waiting cost</string>
    <string name="cost_label">Cost</string>
    <string name="brand_label">Brand</string>
    <string name="model_name_label">Model name</string>
    <string name="id_label">Id</string>
    <string name="phone_number_label">Phone number</string>
    <string name="series_label">Series</string>
    <string name="ending_date_label">Ending date</string>
    <string name="identification_number_label">Identification number</string>
    <string name="company_name_label">Company name</string>
    <string name="start_date_time_label">Start Date and Time</string>
    <string name="end_date_and_time_label">End Date and Time</string>
    <string name="real_date_and_time_label">Real Date and Time</string>
    <string name="car_label">Car</string>
    <string name="client_label">Client</string>
    <string name="operator_label">Operator</string>
</resources>
