<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:isScrollContainer="true"
    tools:context=".ContractFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>


    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/id_label">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/id_edit_text1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/id_label">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/id_edit_text2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/id_label">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/id_edit_text3"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/type_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/start_date_time_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/start_date_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:shadowColor="#FFFFFF"
            android:text="@string/creation_date_time_default"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/end_date_and_time_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/end_date_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:shadowColor="#FFFFFF"
            android:text="@string/creation_date_time_default"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/real_date_and_time_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/real_date_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:shadowColor="#FFFFFF"
            android:text="@string/creation_date_time_default"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <Spinner
        android:id="@+id/car_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <Spinner
        android:id="@+id/client_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operator_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <Spinner
        android:id="@+id/operator_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>